# mentat

./: .gitignore  AGENTS.md  Cargo.toml  README.md
.github/workflows/: ci.yml
core/: Cargo.toml
core-traits/: Cargo.toml  lib.rs  value_type_set.rs
core/src/: cache.rs  lib.rs  sql_types.rs  tx_report.rs
db/: Cargo.toml
db-traits/: Cargo.toml  errors.rs  lib.rs
db/src/: bootstrap.rs  cache.rs  db.rs  debug.rs  internal_types.rs  lib.rs  metadata.rs  schema.rs  timelines.rs  tx.rs  tx_checking.rs  tx_observer.rs  upsert_resolution.rs
edn/: Cargo.toml  build.rs
edn/src/: edn.rustpeg  entities.rs  intern_set.rs  matcher.rs  namespaceable_name.rs  pretty_print.rs  query.rs  symbols.rs  types.rs  utils.rs
edn/tests/: tests.rs
ffi/: Cargo.toml
ffi/src/: android.rs  lib.rs  utils.rs
public-traits/: Cargo.toml  errors.rs  lib.rs
query-algebrizer/: Cargo.toml
query-algebrizer-traits/: Cargo.toml  errors.rs  lib.rs
query-algebrizer/src/: lib.rs  types.rs  validate.rs
query-projector/: Cargo.toml
query-projector-traits/: Cargo.toml  aggregates.rs  errors.rs  lib.rs
query-projector/src/: lib.rs  project.rs  pull.rs  relresult.rs  translate.rs
query-pull/: Cargo.toml
query-pull-traits/: Cargo.toml  errors.rs  lib.rs
query-pull/src/: lib.rs
query-sql/: Cargo.toml
query-sql/src/: lib.rs
scripts/: test-ios.sh
sql/: Cargo.toml
sql-traits/: Cargo.toml  errors.rs  lib.rs
sql/src/: lib.rs
src/: conn.rs  lib.rs  query_builder.rs  store.rs  sync.rs  vocabulary.rs
tests/: external_test.rs  query.rs  tolstoy.rs  vocabulary.rs
tolstoy/: Cargo.toml
tolstoy-traits/: Cargo.toml  errors.rs  lib.rs
tolstoy/src/: bootstrap.rs  datoms.rs  debug.rs  lib.rs  metadata.rs  remote_client.rs  schema.rs  syncer.rs  tx_mapper.rs  tx_processor.rs  types.rs  (+1 more)
transaction/: Cargo.toml
(+32 files in other folders)
