[package]
name = "db_traits"
version = "0.0.1"
edition = "2024"
workspace = ".."

[lib]
name = "db_traits"
path = "lib.rs"

[features]
sqlcipher = ["rusqlite/sqlcipher"]

[dependencies]
anyhow = "1"
thiserror = "1"
[dependencies.edn]
path = "../edn"

[dependencies.core_traits]
path = "../core-traits"

[dependencies.rusqlite]
version = "0.13"
features = ["limits"]
