[package]
name = "mentat_query_pull"
version = "0.0.1"
edition = "2024"
workspace = ".."

[features]
sqlcipher = ["rusqlite/sqlcipher"]

[dependencies]
anyhow = "1"
[dependencies.query_pull_traits]
path = "../query-pull-traits"

[dependencies.rusqlite]
version = "0.38.0"
features = ["limits"]

[dependencies.edn]
path = "../edn"

[dependencies.mentat_core]
path = "../core"

[dependencies.core_traits]
path = "../core-traits"

[dependencies.mentat_db]
path = "../db"
