[package]
name = "mentat_sql"
version = "0.0.1"
edition = "2024"
workspace = ".."

[features]
sqlcipher = ["rusqlite/sqlcipher"]

[dependencies]
anyhow = "1"
ordered-float = "0.5"

[dependencies.rusqlite]
version = "0.13"
features = ["limits"]

[dependencies.core_traits]
path = "../core-traits"

[dependencies.mentat_core]
path = "../core"

[dependencies.sql_traits]
path = "../sql-traits"
