[package]
name = "tolstoy_traits"
version = "0.0.1"
edition = "2024"
workspace = ".."

[lib]
name = "tolstoy_traits"
path = "lib.rs"

[features]
sqlcipher = ["rusqlite/sqlcipher"]

[dependencies]
anyhow = "1"
thiserror = "1"
hyper = "0.11"
serde_json = "1.0"
uuid = { version = "0.5" }

[dependencies.db_traits]
path = "../db-traits"

[dependencies.rusqlite]
version = "0.38.0"
features = ["limits"]
